Bug 526662 - XMLParser needs to stop at NUL char (r=wsharp)