core/AvmCore.cpp
@@ -4860,6 +4860,7 @@ return the result of the comparison ToPrimitive(x) == y.
             bugzilla504525 = 1;     // Vector.concat processes arguments in reverse order
             bugzilla513018 = 1;     // parseFloat accepts illegal number syntax
             bugzilla524122 = 1;     // Incorrect optimization for integers in numeric sort
+            bugzilla526662 = 1;     // XMLParser stops at NUL char
             bugzilla585791 = 1;     // String.localeCompare with a null String object returns 0
         }
     }
